# cpp_patterns

./: CMakeLists.txt  header.h  main.cpp
